<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="bottom"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/intro_title"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="@dimen/intro_title_height"
        android:text="@string/intro_cast_your_vote_title"
        android:textColor="@color/color_better"
        android:textSize="@dimen/intro_title_text_size"/>

    <TextView
        android:id="@+id/intro_subtext1"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_margin_quarter"
        android:layout_marginBottom="@dimen/activity_margin_quarter"
        android:text="@string/intro_cast_your_vote_subtext1"
        android:textColor="@color/color_white"
        android:textSize="@dimen/intro_subtext_text_size"/>

    <TextView
        android:id="@+id/intro_subtext2"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/intro_margin_bottom"
        android:text="@string/intro_cast_your_vote_subtext2"
        android:textColor="@color/color_white"
        android:textSize="@dimen/intro_subtext_text_size"/>

</LinearLayout>
