<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/color_light_light_gray">

    <TextView
        android:id="@+id/message"
        android:text="@string/alert_delete_this_tag"
        android:textColor="@color/color_light_gray"
        android:textSize="@dimen/alert_message_text_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/alert_message_container_margin"
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_marginRight="@dimen/activity_margin"
        android:layout_marginBottom="@dimen/activity_margin"/>

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="end|center"
        android:layout_width="match_parent"
        android:layout_height="@dimen/alert_button_container_height">

        <Button
            android:id="@+id/dismissBtn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/alert_button_height"
            android:layout_marginRight="@dimen/activity_margin_half"
            android:layout_marginEnd="@dimen/activity_margin_half"
            android:text="@string/alert_cancel"
            android:textColor="@color/color_better_dark"
            android:textSize="@dimen/alert_button_text_size"
            style="?android:attr/borderlessButtonStyle"
            android:background="@color/color_clear"/>

        <Button
            android:id="@+id/actionBtn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/alert_button_height"
            android:layout_marginRight="@dimen/activity_margin"
            android:layout_marginEnd="@dimen/activity_margin"
            android:text="@string/alert_delete"
            android:textColor="@color/color_better_dark"
            android:textSize="@dimen/alert_button_text_size"
            style="?android:attr/borderlessButtonStyle"
            android:background="@color/color_clear"/>

    </LinearLayout>

</LinearLayout>