<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_light_light_gray">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/alert_message_container_margin"
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_marginRight="@dimen/activity_margin"
        android:layout_marginBottom="@dimen/activity_margin">

        <TextView
            android:id="@+id/title"
            android:text="@string/alert_which_is_better"
            android:textColor="@color/color_black"
            android:textSize="@dimen/alert_title_text_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/alert_message_container_margin"/>

        <TextView
            android:id="@+id/message"
            android:text="@string/alert_which_is_better_message"
            android:textColor="@color/color_light_gray"
            android:textSize="@dimen/alert_message_text_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/alert_button_container_height"
        android:layout_marginBottom="@dimen/activity_margin_half">

        <Button
            android:id="@+id/dismissBtn"
            android:text="@string/alert_got_it"
            android:textColor="@color/color_better_dark"
            android:textSize="@dimen/alert_button_text_size"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/alert_button_height"
            android:layout_marginRight="@dimen/activity_margin"
            android:layout_marginEnd="@dimen/activity_margin"
            style="?android:attr/borderlessButtonStyle"
            android:background="@color/color_clear"
            android:layout_gravity="end|center"/>

    </FrameLayout>

</LinearLayout>